# SudokuConsole

./: .gitignore  CMakeLists.txt  Constants.h  Makefile  SudokuSolver.cpp  SudokuSolver.h  SudokuSolverBruteForce.cpp  SudokuSolverBruteForce.h  a.out  main.cpp  sudoku.cpp  sudoku.h  sudokuBoardMaker.cpp  sudokuBoardMaker.h  sudokuSquare.cpp  sudokuSquare.h  sudokuSubgrid.h
src/: Constants.h  SudokuSolver.cpp  SudokuSolver.h  SudokuSolverBruteForce.cpp  SudokuSolverBruteForce.h  SudokuSolverHuman.cpp  helpers.cpp  helpers.h  main.cpp  sudoku.cpp  sudoku.h  sudokuBoardMaker.cpp  sudokuBoardMaker.h  sudokuSquare.cpp  sudokuSquare.h  sudokuSubgrid.cpp  sudokuSubgrid.h
src/SudokuBoard/: SudokuBoard2DArray.cpp  SudokuSquare.cpp
src/SudokuBoard/Include/: ISudokuBoard.hpp  SudokuBoard2DArray.hpp  sudokuSquare.hpp
src/SudokuGame/: Sudoku.cpp  SudokuBoardMaker.cpp
src/SudokuGame/Include/: Sudoku.hpp  SudokuBoardMaker.hpp
src/SudokuSolver/: SudokuSolver.cpp  SudokuSolverBruteForce.cpp  SudokuSolverHuman.cpp
src/SudokuSolver/Include/: SudokuSolver.hpp  SudokuSolverBruteForce.hpp  SudokuSolverHuman.hpp
src/include/: Constants.h  SudokuSolver.h  SudokuSolverBruteForce.h  SudokuSolverHuman.h  helpers.h  helpers.hpp  sudokuBoardMaker.h
